really long text no longer breaks the layout

--- a/app/stylus/viewer/content.styl
+++ b/app/stylus/viewer/content.styl
@@ -5,6 +5,7 @@
 pre
 	font-weight 600
 	margin .5em 0
+	border none !important
 
 pre, code
 	font-size 14px
