--- a/app/stylus/viewer/resizer.styl
+++ b/app/stylus/viewer/resizer.styl
@@ -5,7 +5,7 @@
 	bottom 0
 	left sidebar-width
 	width 6px
-	cursor e-resize
+	cursor ew-resize
 
-	&:hover
-		background-color #aaa
+	// &:hover
+		// background-color rgba(255, 255, 255, 0)
